# F95-Manager

./: .gitignore  Cargo.toml  README.md
.github/workflows/: autocompile.yml
RELEASE_NOTES/: 1.6.0.md  v1.5.1.md
src/: app.rs  logger.rs  main.rs  types.rs  ui_constants.rs
src/app/: about_ui.rs  auth_screen.rs  cache.rs  config.rs  downloads.rs  errors_ui.rs  fetch.rs  grid.rs  logs_ui.rs  main_screen.rs  runtime.rs  settings.rs  state.rs  update_ui.rs
src/app/fetch/: helpers.rs
src/app/settings/: helpers.rs  migrate.rs  store.rs  ui.rs
src/app/settings/helpers/: fs_ops.rs  open.rs  paths.rs  run.rs
src/game_download/: mod.rs
src/localization/: mod.rs
src/localization/resources/: en.ftl  ru.ftl
src/parser/: game_info.rs  mod.rs
src/parser/game_info/: hosting.rs  link.rs  page.rs  thread_meta.rs  types.rs
src/parser/game_info/link/: archive.rs  direct.rs  download.rs  gofile.rs  info.rs
src/parser/game_info/page/: mod.rs  page.rs  tests.rs
src/tags/: mod.rs  tags.json  types.rs
src/views/: cards.rs  mod.rs  ui_helpers.rs
src/views/cards/: render.rs
src/views/cards/items/: card.rs  cover_helpers.rs  cover_hover.rs  meta_row.rs  mod.rs  tags_panel.rs
src/views/filters/: mod.rs  render.rs
src/views/filters/items/: discrete_slider.rs  mod.rs  mode_menu.rs  mode_switch.rs  picker.rs  prefixes_menu.rs  search_with_mode.rs  segmented_panel.rs  tags_menu.rs
