[package]
name = "F95_manager"
version = "1.6.0"
edition = "2024"

[dependencies]
clap = "4.5.45"
derive_more = {version = "2.0.1", features = ["full"]}
eframe = { version = "0.27", default-features = false, features = ["wgpu", "glow", "default_fonts"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
strum = {version = "0.27.2", features = ["derive"]}
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "full"] }
image = { version = "0.25.5", features = ["png", "jpeg", "webp", "gif"] }
lazy_static = "1.5.0"
serde_json = "1.0.142"
regex = "1.11.1"
derive-getters = "0.5.0"
crossbeam-channel = "0.5.15"
log = "0.4"
env_logger = "0.11"
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }
threadpool = "1.8"
bitflags = "2.6"
rfd = "0.14"
sevenz-rust = { version = "0.6.1", features = ["bzip2", "zstd", "aes", "cbc"] }
mega = "0.8.0"
futures = "0.3"
scraper = "0.24.0"
fluent-bundle = "0.15"
fluent-syntax = "0.11"
unic-langid = { version = "0.9", features = ["unic-langid-macros"] }
sys-locale = "0.3"
thiserror = "1.0"
intl-memoizer = "0.5"
once_cell = "1.19"
unrar = "0.5.8"

dotenvy = "0.15"

[profile.release]
opt-level = "z"
strip = true
lto = true
unrar = "0.5.8"
panic = "abort"

[build]
rustflags = ["-C", "link-arg=/STACK:8000000"]
